added noti for each verification and manual
